Moved the tsconfig file(s) out of the wwwroot folder. Added support for two tsconfig files. One that includes a sourcemap file for Debug builds and another one that skips the sourcemap for Release builds. Marked the content of wwwroot/ts/* as "content" with the .csproj meaning. This fixes typescript sourcemap issues.

--- a/ChartJs.Blazor.Tests/ChartJs.Blazor.Tests.csproj
+++ b/ChartJs.Blazor.Tests/ChartJs.Blazor.Tests.csproj
@@ -15,10 +15,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="coverlet.collector" Version="1.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\src\ChartJs.Blazor\ChartJs.Blazor.csproj" />
+    <PackageReference Include="ChartJs.Blazor" Version="2.0.0-preview13" />
   </ItemGroup>
 
 </Project>
