--- a/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/ChartJs.Blazor.Sample.ServerSide.csproj
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/ChartJs.Blazor.Sample.ServerSide.csproj
@@ -5,11 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.5" />
+    <PackageReference Include="ChartJs.Blazor" Version="2.0.0-preview20" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\ChartJs.Blazor\ChartJs.Blazor.csproj" />
     <ProjectReference Include="..\..\Shared\ChartJs.Blazor.Sample.Shared\ChartJs.Blazor.Sample.Shared.csproj" />
   </ItemGroup>
 
