Reverted temporary changes for testing the NuGet package

--- a/ChartJs.Blazor.Tests/ChartJs.Blazor.Tests.csproj
+++ b/ChartJs.Blazor.Tests/ChartJs.Blazor.Tests.csproj
@@ -15,7 +15,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="coverlet.collector" Version="1.0.1" />
-    <PackageReference Include="ChartJs.Blazor" Version="2.0.0-preview13" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\src\ChartJs.Blazor\ChartJs.Blazor.csproj" />
+  </ItemGroup>
 </Project>
