--- a/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/ChartJs.Blazor.Sample.ClientSide.csproj
+++ b/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/ChartJs.Blazor.Sample.ClientSide.csproj
@@ -11,11 +11,13 @@
     <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.1.0-preview4.19579.2" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.DevServer" Version="3.1.0-preview4.19579.2" PrivateAssets="all" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="ChartJs.Blazor" Version="2.0.0-preview20" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\ChartJs.Blazor.Sample.Shared\ChartJs.Blazor.Sample.Shared.csproj" />
+    <ProjectReference Include="..\..\..\src\ChartJs.Blazor\ChartJs.Blazor.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
   </ItemGroup>
 
   <ItemGroup>
