--- a/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/ChartJs.Blazor.Sample.ServerSide.csproj
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/ChartJs.Blazor.Sample.ServerSide.csproj
@@ -6,11 +6,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.5" />
-    <PackageReference Include="ChartJs.Blazor" Version="2.0.0-preview20" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\ChartJs.Blazor.Sample.Shared\ChartJs.Blazor.Sample.Shared.csproj" />
+    <ProjectReference Include="..\..\..\src\ChartJs.Blazor\ChartJs.Blazor.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
   </ItemGroup>
 
 </Project>
