--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/ChartJs.Blazor.Sample.Shared.csproj
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/ChartJs.Blazor.Sample.Shared.csproj
@@ -6,6 +6,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ChartJs.Blazor" Version="2.0.0-preview20" />
+    <ProjectReference Include="..\..\..\src\ChartJs.Blazor\ChartJs.Blazor.csproj" />
   </ItemGroup>
 </Project>
