--- a/src/ChartJs.Blazor/tsbuild/debug/tsconfig.json
+++ b/src/ChartJs.Blazor/tsbuild/debug/tsconfig.json
@@ -10,12 +10,12 @@
         "outFile": "../../wwwroot/ChartJsBlazorInterop.js",
         "sourceMap": true,
         "typeRoots": [
-            "../../wwwroot/ts/types/"
+            "../ts/types/"
         ],
         "alwaysStrict": true
     },
     "include": [
-        "../../wwwroot/ts/*.ts"
+        "../ts/*.ts"
     ],
     "compileOnSave": true
 }
