--- a/ChartJs.Blazor.Samples/Shared/ChartJs.Blazor.Samples.Shared.csproj
+++ b/ChartJs.Blazor.Samples/Shared/ChartJs.Blazor.Samples.Shared.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.8" />
+  </ItemGroup>
+
 </Project>
