Prepare for samples

--- a/ChartJs.Blazor.Samples/Client/ChartJs.Blazor.Samples.Client.csproj
+++ b/ChartJs.Blazor.Samples/Client/ChartJs.Blazor.Samples.Client.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\ChartJs.Blazor\ChartJs.Blazor.csproj" />
     <ProjectReference Include="..\Shared\ChartJs.Blazor.Samples.Shared.csproj" />
   </ItemGroup>
 
