--- a/.editorconfig
+++ b/.editorconfig
@@ -15,6 +15,9 @@ trim_trailing_whitespace = true
 [project.json]
 indent_size = 2
 
+[samples.json]
+indent_size = 2
+
 # C# files
 [*.cs]
 # New line preferences
